--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Akansh Maurya # add your name
 author-img: akansh_maurya.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+about-author: I am a student pursuing electrical engineering, intrested in Deep Learing, Robotics, and control systems. # add description
+social-twitter: akansh_maurya # add your Twitter handle
+social-facebook: akansh.maurya # add your Facebook handle
+social-github: akansh12 # add your Github handle
+social-linkedin: akansh-maurya-246570154 # add your Linkedin handle
+social-email: akanshmaurya@gmail.com # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
