--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social-linkedin: akansh-maurya-246570154 # add your Linkedin handle
 social-email: akanshmaurya@gmail.com # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: akanshmaurya  # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
