--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Akansh Maurya # add your name
 author-img: akansh_maurya.jpg # add your photo
-about-author: I am a student pursuing electrical engineering, intrested in Deep Learing, Robotics, and control systems. # add description
+about-author: I am a student pursuing Electrical Engineering, intrested in Deep Learning, Robotics, and Control Systems. # add description
 social-twitter: akansh_maurya # add your Twitter handle
 social-facebook: akansh.maurya # add your Facebook handle
 social-github: akansh12 # add your Github handle
